--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Software developer with skills in JavaScript, TypeScript, Node, and React. Contact him via email or LinkedIn to learn more."
+      content="Software developer specialized in TypeScript, React, and Node. Based in Barcelona."
     />
     <link href="./output.css" rel="stylesheet" />
     <title>Fabricio Borgobello - Curriculum Vitae</title>
   </head>
   <body
-    class="px-8 py-16 text-slate-800 dark:text-[#f5f5f5] bg-white dark:bg-[#121212] max-w-[1000px] mx-auto print:p-0 print:max-w-full print:font-serif print:text-sm"
+    class="m-0 px-8 py-16 text-slate-800 dark:text-[#f5f5f5] bg-white dark:bg-[#121212] max-w-[1000px] mx-auto print:p-0 print:max-w-full print:font-serif print:text-sm"
   >
     <!-- CONTACT INFO -->
     <header
@@ -40,7 +40,7 @@
                 class="fill-current"
               />
             </svg>
-            <span> fborgobello@gmail.com </span>
+            <span>fborgobello@gmail.com</span>
           </li>
           <li class="flex items-center">
             <svg
@@ -59,7 +59,7 @@
                 class="stroke-current"
               />
             </svg>
-            <span> (+34) 601504552 </span>
+            <span>(+34) 601504552</span>
           </li>
           <li class="flex items-center">
             <svg
@@ -84,7 +84,7 @@
                 stroke-linejoin="round"
               />
             </svg>
-            <span> Barcelona, Spain </span>
+            <span>Barcelona, Spain</span>
           </li>
         </ul>
         <!-- SOCIAL MEDIA - PRINT MODE -->
@@ -103,7 +103,7 @@
                 class="fill-current"
               />
             </svg>
-            <span>https://www.linkedin.com/in/fabriborgobello/ </span>
+            <span>https://www.linkedin.com/in/fabriborgobello</span>
           </li>
           <li class="flex items-center">
             <svg
@@ -119,7 +119,7 @@
                 class="fill-current"
               />
             </svg>
-            <span>https://github.com/FabriBorgobello/</span>
+            <span>https://github.com/FabriBorgobello</span>
           </li>
         </ul>
         <!-- SOCIAL MEDIA - SCREEN MODE -->
@@ -128,7 +128,7 @@
         >
           <li>
             <a
-              href="https://www.linkedin.com/in/fabriborgobello/"
+              href="https://www.linkedin.com/in/fabriborgobello"
               target="_blank"
               rel="noopener noreferrer"
               class="text-blue-600 dark:text-blue-400 flex items-center p-2 sm:p-0 hover:underline"
@@ -150,7 +150,7 @@
           </li>
           <li>
             <a
-              href="https://github.com/FabriBorgobello/"
+              href="https://github.com/FabriBorgobello"
               target="_blank"
               rel="noopener noreferrer"
               class="text-blue-600 dark:text-blue-400 flex items-center p-2 sm:p-0 hover:underline"
@@ -194,14 +194,13 @@
           <h4 class="italic">Software developer</h4>
           <ul class="ml-8 list-disc">
             <li>
-              Built software for AI-powered robotic kitchens that cook and serve
-              meals autonomously across retail, healthcare, and military
-              sectors.
+              Built software for AI‑powered robotic kitchens across retail,
+              healthcare, and defense.
             </li>
+            <li>Developed web, voice, and mobile interfaces for CircusOS.</li>
             <li>
-              Developed intuitive web, voice, and touch interfaces for CircusOS,
-              allowing customers and operators to easily interact with robotic
-              food service systems.
+              Created developer tooling (SDKs, CLI, testing) and a cross‑product
+              design system used across teams.
             </li>
           </ul>
         </div>
@@ -215,16 +214,11 @@
           <h4 class="italic">Software developer</h4>
           <ul class="ml-8 list-disc">
             <li>
-              Built a fintech platform for a B2B SaaS startup, working on both
-              frontend and backend, with integrations to multiple European banks
-              for PSD2 compliance and investment features.
+              Built a B2B fintech platform (frontend/backend) with PSD2 and Open
+              Banking integrations.
             </li>
             <li>
-              Led accessibility initiatives achieving WCAG 2.1 AA compliance.
-            </li>
-            <li>
-              The product was acquired and integrated into a top-tier financial
-              company.
+              Product acquired and integrated into a top‑tier financial company.
             </li>
           </ul>
         </div>
@@ -235,32 +229,20 @@
           <p>Nov 2021 - Nov 2023</p>
         </div>
         <div>
-          <h4 class="italic">Back-end developer</h4>
+          <h4 class="italic">Full-stack developer - Technical lead</h4>
           <ul class="ml-8 list-disc">
             <li>
-              Developed microservices using NodeJs, Express, NestJs, and others
-              for an entertainment platform.
+              Developed microservices with Node.js (Express, NestJS) for an
+              entertainment platform; implemented event‑driven architecture and
+              REST APIs.
             </li>
             <li>
-              Implemented event-driven architecture and REST API for enhanced
-              integration and functionality.
-            </li>
-          </ul>
-        </div>
-        <div>
-          <h4 class="italic">Front-end developer - Technical lead</h4>
-          <ul class="ml-8 list-disc">
-            <li>
-              Led the transition to microservices architecture for a PropTech
-              platform using ReactJs/NextJs, Python/Django, and Azure DevOps.
+              Led the transition to microservices for a PropTech platform using
+              React/Next.js, Python/Django, and Azure DevOps.
             </li>
             <li>
-              Built and maintained a design system with atomic design
-              principles, including development of UI libraries and tooling.
-            </li>
-            <li>
-              Successfully launched the project. Currently generating
-              significant revenue.
+              Built and maintained a design system with atomic design, including
+              UI libraries and tooling.
             </li>
           </ul>
         </div>
@@ -273,13 +255,9 @@
         <div>
           <h4 class="italic">Front-end developer - Mobile developer</h4>
           <ul class="ml-8 list-disc">
+            <li>Built a cross‑platform personnel management app.</li>
             <li>
-              Front-end and mobile development for a multi-platform application
-              for personnel management.
-            </li>
-            <li>
-              UI design and layout development with React Js, TypeScript,
-              Angular, Ionic and Capacitor.
+              Worked with React, TypeScript, Angular, Ionic, and Capacitor.
             </li>
           </ul>
         </div>
@@ -293,9 +271,8 @@
           <h4 class="italic">Front-end developer</h4>
           <ul class="ml-8 list-disc">
             <li>
-              Built front-end interfaces with React.js, Redux, and Jest, and
-              developed back-end services with Node.js, Express, and MongoDB for
-              a security and monitoring platform.
+              Built a security/monitoring platform: React, Redux, Jest; Node.js,
+              Express, MongoDB.
             </li>
           </ul>
         </div>
@@ -309,12 +286,10 @@
       <article>
         <div class="flex flex-col sm:flex-row sm:justify-between font-bold">
           <h3>Master in Fintech and Financial Markets</h3>
-          <p>2024</p>
+          <p>2024 - 2025</p>
         </div>
         <div>
-          <h4 class="italic">
-            Universitat de Barcelona (Barcelona's University)
-          </h4>
+          <h4 class="italic">Universitat de Barcelona</h4>
           <ul class="ml-8 list-disc">
             <li>
               Specialized in digital asset management, regulatory frameworks,
@@ -324,37 +299,57 @@
         </div>
       </article>
     </section>
-    <!-- TEACHING -->
+    <!-- FREELANCE & SIDE PROJECTS -->
     <section class="mt-8 space-y-4 print:mt-4 print:space-y-2">
       <h2 class="text-lg font-bold border-b-slate-500 border-b-[1px] uppercase">
-        TEACHING AND MENTORSHIP EXPERIENCE
+        FREELANCE & SIDE PROJECTS
       </h2>
       <article>
-        <div class="flex flex-col sm:flex-row sm:justify-between font-bold">
-          <h3>Next-U (contract, short-term)</h3>
-          <p>2023</p>
+        <div class="flex flex-col sm:flex-row sm:justify-between">
+          <div class="flex items-center gap-2">
+            <h3 class="font-bold">Lefebvre</h3>
+            <p class="italic">(UI design)</p>
+          </div>
+          <p class="font-bold">2025</p>
         </div>
         <div>
-          <h4 class="italic">Front-end Instructor - Project Mentor</h4>
           <ul class="ml-8 list-disc">
             <li>
-              Teaching and mentoring students through the development and
-              execution of projects that emulate real-world scenarios.
+              Created web and mobile interfaces in Figma for a legal company,
+              ensuring accessibility, componentization, and modular design.
             </li>
           </ul>
         </div>
       </article>
       <article>
-        <div class="flex flex-col sm:flex-row sm:justify-between font-bold">
-          <h3>CoderHouse (contract, part-time)</h3>
-          <p>2020 – 2022</p>
+        <div class="flex flex-col sm:flex-row sm:justify-between">
+          <div class="flex items-center gap-2">
+            <h3 class="font-bold">Next-U</h3>
+            <p class="italic">(Instructor - Project Mentor)</p>
+          </div>
+          <p class="font-bold">2023</p>
         </div>
         <div>
-          <h4 class="italic">React Js teacher</h4>
           <ul class="ml-8 list-disc">
             <li>
-              Provided engaging instruction in React.js, from foundational to
-              advanced topics. Facilitated hands-on project experience.
+              Mentored students through the execution of projects that emulate
+              real-world scenarios.
+            </li>
+          </ul>
+        </div>
+      </article>
+      <article>
+        <div class="flex flex-col sm:flex-row sm:justify-between">
+          <div class="flex items-center gap-2">
+            <h3 class="font-bold">CoderHouse</h3>
+            <p class="italic">(React instructor)</p>
+          </div>
+          <p class="font-bold">2020 – 2022</p>
+        </div>
+        <div>
+          <ul class="ml-8 list-disc">
+            <li>
+              Taught React (foundations to advanced) with hands‑on projects.
             </li>
           </ul>
         </div>
@@ -369,16 +364,17 @@
         <li>
           <b>Other skills:</b>
           Performance optimization (bundle analysis, code splitting, lazy
-          loading, caching strategies), SEO,Web Accessibility (WCAG 2.1, ARIA,
-          semantic HTML, screen readers), Internationalization (i18n, RTL
-          support, dynamic translations), animations, HTML, CSS/SCSS,
-          JavaScript, TypeScript, React, NextJs, React Native, SQL, Postgres,
-          Git, Docker, Figma, Framer Motion, Cypress, Playwright, Jest, React
-          Testing Library, Vitest, Storybook.
+          loading, caching strategies); Web Accessibility (WCAG 2.1, ARIA,
+          semantic HTML, screen readers); Internationalization (i18n, RTL
+          support, dynamic translations); SEO. Frontend: HTML, CSS/SCSS,
+          JavaScript, TypeScript, React, Next.js, animations, Framer Motion,
+          Storybook. Mobile: React Native. Backend/DB: SQL, PostgreSQL. Testing:
+          Jest, React Testing Library, Cypress, Playwright, Vitest. Tools: Git,
+          Docker, Figma.
         </li>
         <li>
           <b>Languages:</b>
-          English (Advanced), Spanish (Native), Italian (Advanced).
+          English (advanced), Spanish (native), Italian (advanced).
         </li>
       </ul>
     </section>
