--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
           <ul class="ml-8 list-disc">
             <li>
               Created web and mobile interfaces in Figma for a legal company,
-              ensuring accessibility, componentization, and modular design.
+              ensuring a11y, componentization and modular design.
             </li>
           </ul>
         </div>
